--- a/css/carroselDeComentarios.css
+++ b/css/carroselDeComentarios.css
@@ -50,12 +50,15 @@
 background-color: black;
     box-shadow: rgb(16, 93, 103)  0 0 5px;
     border-radius:  50%;
-    width: 35px !important;
-    height: 45px !important;
+    width: 60px !important;
+    height: 60px !important;
+    font-size: 40px;
+    padding-bottom: 70px;
+
 }
 .carousel-control.prev{
     left: 20px;
-    width: 35px !important;
+    
 
 }
 
