--- a/css/portifolio.css
+++ b/css/portifolio.css
@@ -9,9 +9,11 @@
             padding: 0;
             background-color: black;
             margin-top: 7%;
-            overflow: hidden;
+            overflow: scroll !important;
         }
-        
+        #topPage{
+            margin-top: 125px;
+        }
         .portfolio {
             display: flex;
             flex-direction: column;
@@ -25,20 +27,24 @@
         }
         .project {
             color: #fff;
-            background-color: #000000;
+            background-color: rgb(8, 43, 36);
             border: 5px solid rgb(14, 78, 64);
             margin: 5px;
-            padding: 20px;
-            width: 900px;
+            padding: 10px !important;
+            width: 750px;
+            height: auto;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
             position: relative;
             border-radius: 15px;
+            display: flex;
+            flex-direction: column;
+            place-items: center;
+           
         }
         .project:hover {
             transform: scale(1.05);
             z-index: 10; /* Bring to front on hover */
-            border-bottom: none;
 
         }
         .project:hover .carousel{
@@ -47,32 +53,56 @@
 
         }
         .carousel {
-            position: absolute;
-            top: 100%;
-            left: -5px;
-            width: 900px;
-
+            position: absolute !important;
+            top: 0 !important;
+            left: 100%;
+            width: 600px;
+            margin-left: 10px !important;
             display: none;
             flex-direction: column;
             overflow: hidden;
             z-index: 10; /* Ensure it is on top */
-            background-color: #fff; /* To avoid transparency issues */
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            background-color: transparent; /* To avoid transparency issues */
             align-items: center; /* Center the images horizontally */
-            background-color: #000000;
-            border-radius: 15px;
+            background-color: rgb(8, 43, 36);
             border: 5px solid rgb(14, 78, 64);
-            border-top: none ;
+            border-radius: 15px;
+            padding: 15px;
 
+        }
+        #title_project{
+            font-size: 32px;
+            margin-bottom: 0;
+        }
+        #title_project, #desc_project{
+            color: rgb(178, 178, 178);
+            text-align: center;
+        }
+        #desc_project{
+            color: rgb(255, 255, 255);
+            margin: 10px;
+        }
+        #date_project{
+            color: rgb(255, 255, 255);
+            margin: 10px;
+            text-align: center;
+            border: 5px solid rgb(14, 78, 64);
+            border-radius: 15px;
+            background-color:  #0a3b3d;
+            width: 50%;
+
+        }
+        .carousel:last-child{
+            margin-top: -175px !important;
         }
         .carousel_inner {
             display: flex;
             transition: transform 0.5s ease;
         }
         .carousel img {
-            width: 400px;
+            width: 500px;
             object-fit: cover;
-            border-radius: 5px;
+            border-radius: 15px;
             flex-shrink: 0;
             display: none; /* Hide all images by default */
         }
@@ -89,21 +119,20 @@
             border: none;
             color: white;
             font-size: 18px;
-            
             cursor: pointer;
             position: absolute;
             top: 35%;
-            font-size: 40px;
-            padding: 5px;
-            width: 60px;
-            height: 60px;
+            font-size: 20px;
+
+            width: 40px;
+            height: 40px;
             text-align: center;
             border-radius: 50%;
             border: solid 3px rgb(11, 96, 82);
             box-shadow: 0 0 15px rgb(11, 96, 82), inset 0 0 15px rgb(11, 96, 82);
         }
         .bnt_left{
-            left:150px;
+            left:5px;
         }
         .insert_service{
             font-size: 25px;
@@ -118,7 +147,7 @@
         }
         
         .bnt_right {
-           right: 150px;
+           right: 5px;
         }
         #titlePage{
             color:rgb(11, 96, 82);
