--- a/css/style_home.css
+++ b/css/style_home.css
@@ -19,7 +19,10 @@
 .screen_exibition_ini.apareceu { 
   opacity: 1;
 }
-
+.button_top_home{
+  text-decoration: none;
+  color: white !important;
+}
 .row{
   width: 110% !important;
   margin-left: -5%;
