--- a/css/style_about.css
+++ b/css/style_about.css
@@ -234,6 +234,7 @@ p {
   display: flex;
   justify-content: center;
   text-align: center;
+  align-items: center;
   background-color: #000000;
 }
 
