--- a/css/style_infPePf.css
+++ b/css/style_infPePf.css
@@ -12,18 +12,23 @@ main{
     width: 130%;
     margin-bottom: 2rem;
     box-shadow: 0 0 10px rgb(0, 123, 111);
-    border: 3px dashed #00917e;
-    border-radius: 15px;
+    border: 3px solid #00917e;
+    border-radius: 20px;
     overflow: hidden;
     text-align: justify;
 }
 .card img{
     width: 100%;
     display: block;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    height: 500px;
+    width: 100%;
 }
 
 .card h2 {
     margin-top: 0;
+    color: #00917e;
 }
 
 .modal {
@@ -40,26 +45,84 @@ main{
     align-items: center;
 }
 
+.modal-content h2{
+    font-size: 28pt;
+}
 .modal-content {
-    background-color: #fff;
+    background-color: #000000;
     margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
+    padding: 35px 50px;
+    text-align: justify;
+    border: 2px solid #00917e;
     width: 80%;
-    max-width: 500px;
-    border-radius: 10px;
+    top: 27%;
+    max-width: 850px;
+    border-radius: 25px;
+}
+
+.modal-content ul{
+ color: #00917e;
+ font-size: 18pt;
 }
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
+    color: #00b69e;
+    position: relative;
+    outline: none;
+    font-size: 38pt;
+    border: none;
+    margin: 0 0 10px 715px;
     font-weight: bold;
+    text-shadow: none;
 }
 
 .close:hover,
 .close:focus {
-    color: #000;
+    color: #00917e;
+    filter: drop-shadow(0 0 10px #00917e);
+    transform: scale(1.1);
+    border: none;
     text-decoration: none;
     cursor: pointer;
 }
+
+.modal-content button  {
+    --green: rgb(0,128,111);
+    font-size: 16pt;
+    font-weight: 600;
+    height: 65px;
+    width: 100%;
+    padding: 0.7em 2.7em;
+    letter-spacing: 0.06em;
+    position: relative;
+    font-family: inherit;
+    border-radius: 0.6em;
+    overflow: hidden;
+    transition: all 0.3s;
+    line-height: 1.4em;
+    margin: 5px 0;
+    border: 2px solid var(--green);
+    background: linear-gradient(to right, rgba(27, 253, 156, 0.1) 1%, transparent 40%,transparent 60% , rgba(27, 253, 156, 0.1) 100%);
+    color: var(--green);
+    box-shadow: inset 0 0 10px rgba(0, 128, 111, 0.685), 0 0 9px 3px rgba(27, 253, 156, 0.1);
+  }
+  
+  .modal-content button:hover {
+    color: #ffffff;
+    box-shadow: inset 0 0 10px rgba(0, 128, 111, 0.767), 0 0 9px 3px rgba(27, 253, 156, 0.2);
+  }
+  
+  .modal-content button:before {
+    content: "";
+    position: absolute;
+    left: -4em;
+    width: 4em;
+    height: 100%;
+    top: 0;
+    transition: transform .4s ease-in-out;
+    background: linear-gradient(to right, transparent 1%, rgba(0, 125, 110, 0.596), rgba(0, 125, 110, 0.596) 60% , transparent 100%);
+  }
+  
+  .modal-content button:hover:before {
+    transform: translateX(55rem);
+  }
